# monpy-api

./: config.py  main.py  pyproject.toml
.github/workflows/: linting.yml
src/: email.py  game.py  jwt.py  logger.py  model.py  proxies.json  utils.py  websocket.py
src/apps/: __init__.py  depends.py  pagination.py  websocket.py
src/apps/games/: __init__.py  models.py  routes.py
src/apps/users/: __init__.py  forms.py  models.py  public.py  routes.py
src/services/: cache.py  s3client.py  snowflake.py
