[project]
name = "monopoly"
version = "0.1.0"
description = "Monopoly Game Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.30.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "redis[asyncio]>=6.2.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
