[project]
name = "monopoly"
version = "0.1.0"
description = "Monopoly Game Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beanie>=1.30.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "redis[asyncio]>=6.2.0",
    "resend>=2.11.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff==0.12.3",
]

[tool.ruff]
line-length = 80
target-version = "py313"

lint.select = [
    "F",
    "E",
    "W",
    "N",
    "B",
    "RUF"
]

lint.ignore = [
    "B904"
]

exclude = [
    ".git",
    ".idea",
    ".vscode",
    "venv/",
    ".venv",
    ".ruff_cache",
    "__pycache__"
]

[tool.ruff.format]
quote-style = "single"
